--- a/Kure Theme/Kure.css
+++ b/Kure Theme/Kure.css
@@ -1112,13 +1112,18 @@ body:not([data-query*='status":7']) .list-table .list-table-data .data.status {
 
 .list-table .list-table-data .data.number {
 	position: absolute;
-	top: calc(50% - 1rem);
+	top: 50%;
 	right: calc(100% + 10px);
-	height: 2rem;
-	order: 1;
+	width: 1ch;
+	line-height: 1em;
 	text-shadow: 1px 1px 2px hsl(var(--content));
-	font-size: 1.2rem;
-	line-height: 2rem;
+	word-break: break-all;
+	word-wrap: anywhere;
+	transform: translateY(-50%);
+}
+
+tbody:nth-of-type(n+101) .data.number::first-letter {
+	font-weight: bold;
 }
 
 /* Score */
