Fix watch icon displaying
Regression from a MAL update a while ago

--- a/Kure Theme/Kure.css
+++ b/Kure Theme/Kure.css
@@ -1041,7 +1041,7 @@ body:not([data-query*='status":7']) .list-table .list-table-data .data.status {
 	vertical-align: middle;
 }
 
-.icon-watch {
+[class^="icon-watch"] {
 	display: none !important;
 }
 
