--- a/Brink Theme/Brink.css
+++ b/Brink Theme/Brink.css
@@ -2249,6 +2249,7 @@ body #fancybox-close {
 }
 
 .mal-modal-content {
+	color: hsl(var(--text)) !important;
 	background: hsl(var(--bg)) !important;
 	border: none !important;
 	border-radius: 0 !important;
