Brink v1.8.2 Fix Streaming Popup Colour
- Fix black text in "Where to watch" popup
Thanks to Lawliet529 for this fix!

Co-authored-by: Lawliet529 <85656044+Lawliet529@users.noreply.github.com>

--- a/Brink Theme/Brink.css
+++ b/Brink Theme/Brink.css
@@ -1,5 +1,5 @@
 /* "Brink" by Valerio Lyndon
- * Version 1.8.1
+ * Version 1.8.2
  * 
  * = TABLE OF CONTENTS =
  * 
@@ -2249,6 +2249,7 @@ body #fancybox-close {
 }
 
 .mal-modal-content {
+	color: hsl(var(--text)) !important;
 	background: hsl(var(--bg)) !important;
 	border: none !important;
 	border-radius: 0 !important;
